--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "",
-    "dev": "node index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "format": "pnpm exec prettier . --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +15,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.29.2",
   "dependencies": {
+    "axios": "^1.13.5",
     "baileys": "7.0.0-rc.9",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
@@ -23,10 +24,10 @@
     "mongodb": "^7.1.0",
     "multer": "^2.0.2",
     "pino": "^10.3.0",
-    "qrcode": "^1.5.4",
-    "socket.io": "^4.8.3"
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
+    "nodemon": "^3.1.14",
     "prettier": "3.8.1"
   }
 }
