--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "license": "ISC",
   "packageManager": "pnpm@10.29.2",
   "dependencies": {
+    "@whiskeysockets/baileys": "7.0.0-rc.9",
     "axios": "^1.13.5",
     "baileys": "7.0.0-rc.9",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "link-preview-js": "^4.0.0",
-    "mongodb": "^7.1.0",
+    "mongoose": "^9.2.2",
     "multer": "^2.0.2",
     "pino": "^10.3.0",
     "qrcode": "^1.5.4"
